# ros-rover

./: 99-usb-serial.rules  Dockerfile  README.md  calibration.py  pid_readings.csv  rover.code-workspace  run-local.sh  run-manual-control.sh  run-ui.sh  setup.sh  stop-motor.sh  wiring.fzz
arduino/: .clang-format  platformio.ini
arduino-bridge/: arduino_bridge.py  package.xml  requirements.txt  setup.cfg  setup.py
arduino/src/: main.cpp
arduino_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hardware_control/: package.xml  setup.cfg  setup.py
hardware_control/hardware_control/: hardware_control.py
maps/: garfield.pgm  garfield.yaml
pico_bridge/: package.xml  requirements.txt  setup.cfg  setup.py
pico_bridge/pico_bridge/: pico_bridge.py
rover/: CMakeLists.txt  package.xml
rover/config/: nav2_params.yaml  rplidar.yaml  slam.yaml
rover/launch/: rover.py
rover_gazebo/: CMakeLists.txt  package.xml
rover_gazebo/config/: nav2_params.yaml  slam_localization.yaml
rover_gazebo/launch/: rover.launch.py  rover_ui.launch.py
rover_gazebo/models/room/: model.sdf
rover_gazebo/models/rover/: model.sdf
rover_gazebo/rviz/: rover_gazebo.rviz
rover_gazebo/worlds/: rover_room.world
rpi-bumper/: package.xml  rpi_bumper.py  setup.cfg  setup.py
