<?xml version="1.0"?>
<package format="2">
  <name>arduino_bridge</name>
  <version>0.0.1</version>
  <description>
    A bridge between ROS and Arduino.
  </description>
  <maintainer email="prishelec@gmail.com">Leonti Bielski</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
