<?xml version="1.0"?>
<package format="2">
  <name>rpi_bumper</name>
  <version>0.0.1</version>
  <description>
    Trigger ROS messages on bumper switch events.
  </description>
  <maintainer email="prishelec@gmail.com">Leonti Bielski</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
